fix(doc): modify logo and title

--- a/web/src/assets/style.less
+++ b/web/src/assets/style.less
@@ -105,7 +105,7 @@ ul {
   text-align: center;
 }
 // global style
-@prefix-cls: "falcon-ng";
+@prefix-cls: "nightingale";
 body { background: #f0f2f5; }
 .mt10 { margin-top: 10px; }
 .mr10 { margin-right: 10px; }
